src/snapshots/templates__parser__test__parse_pure_text.snap
---
source: src/parser.rs
assertion_line: 263
expression: "Hello name, good to meet you"

---
[
    Text(
        "Hello name, good to meet you",
    ),
]
