src/snapshots/templates__parser__test__parse_single_parens.snap
---
source: src/parser.rs
assertion_line: 268
expression: "Hello { name }, good to meet you"

---
[
    Text(
        "Hello { name }, good to meet you",
    ),
]
