src/snapshots/templates__parser__test__parse_with.snap
---
source: src/parser.rs
assertion_line: 327
expression: "{> with user as User\n{{ user }}"

---
[
    With(
        (
            "user",
            8..12,
        ),
        "User",
    ),
    Identifier(
        "user",
    ),
]
